Updated to Polymer 0.13.0 and Angular 0.14.0

--- a/web/angularpolymer.html
+++ b/web/angularpolymer.html
@@ -7,6 +7,7 @@
     <title>Angular and Polymer Data Binding</title>
     <link rel="stylesheet" href="angularpolymer.css">
     <link rel="import" href="my_element.html">
+    <link rel="import" href="packages/polymer/polymer.html">
     <style>
     section {
       border: 1px solid black;
